fix(home): prevent header from overflowing on right corner on mobile screens

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -6,10 +6,6 @@
     top: 0;
 }
 
-.img-container {
-    height: 45rem;
-}
-
 
 .main-card-info {
     --border--width: .75rem;
